# dissent

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: build-and-test.yml
examples/: json.rs
src/: cons.rs  lib.rs  stream.rs  token.rs
