[package]
name = "dissent"
version = "0.1.0"
authors = ["Cormac O'Brien <cormac@c-obrien.org>"]
edition = "2018"

description = "A flexible, zero-copy recursive descent parsing toolkit."
license = "MIT"
keywords = ["parsing"]
categories = ["parsing"]

[features]
default = ["regex"]

[dependencies]
bumpalo = "3"
lazy_static = "1"
regex = { version = "1", optional = true }
unicode-width = "0.1"
